# TrueCoinBot

./: .env-example  README.md  main.py  pyproject.toml  requirements.txt
data/: config.py
utils/: starter.py  truecoin.py
utils/core/: __init__.py  file_manager.py  telegram.py
