[tool.poetry]
name = "truecoinbot"
version = "0.1.0"
description = ""
authors = ["hhhscvx <hhhscvx@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.5.2"
loguru = "^0.7.2"
Pyrogram = "^2.0.106"
TgCrypto = "^1.2.5"
aiohttp = "^3.10.5"
aiohttp-socks = "^0.9.0"
fake-useragent = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
